- change required PDL version to 2.019
- use INC and LIBS environment variables in checking for NetCDF 4 - thanks Doug Hunt
- fix NetCDF 4 detection - thanks Doug Hunt

4.23 2022-01-13
- fix to work with PDL 2.066
- spelling fixes - thanks @sebastic

4.22 2021-08-22
- incorporate int-size patch from https://rt.cpan.org/Public/Bug/Display.html?id=80379 - thanks @sisyphus
- incorporate Debian patches from https://rt.cpan.org/Public/Bug/Display.html?id=115393
- fix not recognising https URLs, reported in https://rt.cpan.org/Public/Bug/Display.html?id=131169
- get method translates _FillValue to bad with PDL_BAD enabled - Heiko Klein, Norwegian Meteorological institute, from https://rt.cpan.org/Public/Bug/Display.html?id=67776
- allow setting of _FillValue for netcdf4 files in put/putslice command,
  since putatt does no longer work: Change of _FillValue not allowed after
  data has been written. - Heiko Klein

4.21 2021-05-01
- build and metadata updates

4.20  2013-11-18
- Added PREREQ_PM as PDL version 0 to Makefile.PL.

4.19  2013-09-16
- Fixed errors in version number to help PAUSE indexer.

4.18  2013-09-16
- Added new library path (/usr/local/lib64) and commented out PDL 2.2 requirement.
  Requested by Hernan De Angelis.

4.17  2013-03-06
- Since netcdf-4.1, the netcdf-library changes the meaning of nc_sync from
  release internal buffers to make sure everything known is written to disk.
  This slows down writing a lot. PDL::NetCDF no longer calls nc_sync
  automatically (except on close). To ensure writing the file to the disk
  while keeping it open, $nc->sync is now provided.

4.16  2012-04-07
- Since netcdf-4.20, the NC_NETCDF4 preprocessor variable can no longer be used
  to determine if HDF functionality is compiled in.  No perform a link/run
  test in Makefile.PL to determine if nc_inq_var_deflate is defined or not.
  Use this for the isNetcdf4 function as well.

4.15  2011-11-28
- Another attempt at indexing on CPAN.  Specify META_MERGE in Makefile.PL to