@@ -1,6 +1,7 @@
 - change required PDL version to 2.019
-- use INC and LIBS environment variables in checking for NetCDF 4 - thanks Doug Hunt
-- fix NetCDF 4 detection - thanks Doug Hunt
+- use INC and LIBS environment variables in checking for NetCDF 4 - thanks @doughunt
+- fix NetCDF 4 detection - thanks @doughunt
+- add nc_put_att_string - thanks @doughunt
 
 4.23 2022-01-13
 - fix to work with PDL 2.066
